--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "author": "Guilherme",
   "license": "ISC",
-  "devDependencies": {
+  "Dependencies": {
     "cypress": "^12.10.0",
     "cypress-cucumber-preprocessor": "^4.3.1"
   },
