--- a/.github/workflows/test_login.yml
+++ b/.github/workflows/test_login.yml
@@ -26,5 +26,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm install cypress
+    - run: npm install
     - run: npm test
